--- a/styles/main.css
+++ b/styles/main.css
@@ -43,3 +43,8 @@ h1,h2,h3,h4,h5,h6 {
     border: 1px solid rgb(59, 59, 59);
     border-radius: 2px;
 }
+
+.moodRadio {
+	margin-right: 10px;
+	margin-left: 0px;
+}
